Fixed many warnings due to new JDK 9 / 10 conventions.